--- a/src/assets/style/grid/secao.css
+++ b/src/assets/style/grid/secao.css
@@ -1,12 +1,12 @@
 .secao {
     display: grid;
+    align-items: center;
 }
-
 .secao-horizontal {
     grid-template-rows: 120px auto;
 }
 
-.secao-vertical {
+.secao-vertical { 
     grid-template-columns: 1fr auto;
     grid-template-rows: 1fr 2fr;
 }
