--- a/src/assets/style/grid/secao.css
+++ b/src/assets/style/grid/secao.css
@@ -2,8 +2,14 @@
     display: grid;
     align-items: center;
 }
+
 .secao-horizontal {
     grid-template-rows: 120px auto;
+}
+
+.secao-horizontal .secao__cartoes {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(100%/2, max(348px, 100%/3)), 1fr));
 }
 
 .secao-vertical { 
@@ -13,4 +19,6 @@
 
 .secao-vertical .secao__cartoes {
     grid-column: 1/3;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(100%/2, max(165px, 100%/6)), 1fr));
 }
